<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_app_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="support_email">developer@example.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_search">Поиск</string>
    <string name="title_empty">Ничего не найдено</string>
    <string name="title_no_internet">Проблемы со связью</string>
    <string name="error_no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
</resources>
