<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/MainButtonStyle"
        android:text="@string/search" />

    <Button
        android:id="@+id/btnPlaylists"
        style="@style/MainButtonStyle"
        android:text="@string/playlists" />

    <Button
        android:id="@+id/btnFavorites"
        style="@style/MainButtonStyle"
        android:text="@string/favorites" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/MainButtonStyle"
        android:text="@string/settings" />

</LinearLayout>